--- a/app/src/main/res/layout/attribute_list_color_item.xml
+++ b/app/src/main/res/layout/attribute_list_color_item.xml
@@ -15,15 +15,14 @@
             android:layout_marginStart="12dp" android:background="@color/colorAccent"/>
     <TextView
             android:text="@string/select_color"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/attribute_title"
             android:paddingBottom="8dp"
             android:paddingLeft="8dp"
             android:paddingRight="4dp"
             android:paddingTop="5dp" android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/attribute_color_square"
-            android:layout_marginStart="8dp" android:textAlignment="viewStart" android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="8dp" android:textAlignment="viewStart"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
