Added the color field to the text attribute and implemented it, so the icon's color depends on the group

--- a/app/src/main/res/layout/attribute_list_text_item.xml
+++ b/app/src/main/res/layout/attribute_list_text_item.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content" android:id="@+id/linearLayout">
+                                                   android:layout_height="@dimen/attribute_text_height"
+                                                   android:id="@+id/linearLayout">
 
     <ImageView
-            android:layout_width="@android:dimen/notification_large_icon_width"
-            android:layout_height="@android:dimen/notification_large_icon_height" android:id="@+id/attribute_icon"
+            android:layout_width="@dimen/attribute_icon_width"
+            android:layout_height="@dimen/attribute_icon_width"
+            android:id="@+id/attribute_icon"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:srcCompat="?android:attr/actionModeCopyDrawable"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:srcCompat="?android:attr/actionModeCopyDrawable"/>
     <TextView
             android:text="@string/task_title_placeholder"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/attribute_title"
             android:paddingBottom="8dp"
             android:paddingLeft="8dp"
             android:paddingRight="4dp"
             android:paddingTop="5dp" android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/attribute_icon"
-            android:layout_marginStart="16dp" android:textAlignment="viewStart" android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="16dp" android:textAlignment="viewStart"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
