--- a/app/src/main/res/menu/main_actionbar_menu.xml
+++ b/app/src/main/res/menu/main_actionbar_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/action_clear"
         android:title="Clear list"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_clear"
         app:showAsAction="ifRoom"
     />
     <item
