--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -11,7 +11,7 @@
             android:id="@+id/edit_constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:elevation="10dp"
-    >
+            app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
                 android:layout_width="wrap_content"
