--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/edit_constraint_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:elevation="10dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
@@ -67,8 +67,8 @@
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_constraint_layout"
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/edit_recyclerview"
-            tools:listitem="@layout/attribute_list_text_item">
+            tools:listitem="@layout/attribute_list_text_item" android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/edit_constraint_layout">
     </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
