--- a/app/src/main/res/layout/attribute_list_sublist_item.xml
+++ b/app/src/main/res/layout/attribute_list_sublist_item.xml
@@ -10,5 +10,18 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/attribute_sublist_recyclerview"/>
+            android:id="@+id/attribute_sublist_recyclerview"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/attribute_title"/>
+    <TextView
+            android:text="Sublist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/attribute_title"
+            android:paddingBottom="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="4dp"
+            android:paddingTop="5dp" android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textAlignment="viewStart" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
