--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:id="@+id/drawer_layout"
+        tools:openDrawer="start">
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                     xmlns:tools="http://schemas.android.com/tools"
-                                                     android:layout_width="match_parent"
-                                                     android:layout_height="match_parent"
-                                                     tools:context=".Main.MainActivity"
-                                                     android:id="@+id/main_top_layout">
-    <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionLayout
-            xmlns:rfal="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/activity_main_rfal"
-            android:layout_width="match_parent"
+    <include
+            layout="@layout/app_bar_main"
             android:layout_height="match_parent"
-            rfal:rfal_frame_color="#ffffff"
-            rfal:rfal_frame_alpha="0.7"
-    >
-        <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar_main_activity"
-                android:layout_width="match_parent"
-                android:minHeight="56dp"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:elevation="4dp"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
-                rfal:titleTextColor="@color/design_default_color_on_primary"/>
+            android:layout_width="match_parent"/>
 
-        <com.google.android.material.tabs.TabLayout
-                android:id="@+id/main_tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:layout_alignParentStart="true"
-                android:layout_marginStart="0dp" android:layout_below="@+id/toolbar_main_activity">
-        </com.google.android.material.tabs.TabLayout>
-        <androidx.viewpager.widget.ViewPager
-                android:id="@+id/main_view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/main_tab_layout" android:layout_alignParentBottom="true"
-        />
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/attribute_list_text_item"
+            app:menu="@menu/drawer_menu"/>
 
-        <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionButton
-                xmlns:rfab="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/rfab_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginRight="15dp"
-                android:layout_marginBottom="15dp"
-                rfab:rfab_size="normal"
-                rfab:rfab_drawable="@drawable/rfab__drawable_rfab_default"
-                rfab:rfab_shadow_radius="7dp"
-                rfab:rfab_shadow_color="#999999"
-                rfab:rfab_shadow_dx="0dp"
-                rfab:rfab_shadow_dy="5dp"
-                android:visibility="visible"
-                rfab:rfab_color_normal="@color/colorAccent" rfab:rfab_color_pressed="@color/colorAccentDark"/>
-
-    </com.wangjie.rapidfloatingactionbutton.RapidFloatingActionLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
