Styled the navigation drawer header and the status bar. Changed the dark primary color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#01579B</color>
-    <color name="colorPrimaryDark">#003D5B</color>
+    <color name="colorPrimaryDark1">#003D5B</color>
+    <color name="colorPrimaryDark">#013962</color>
+    <color name="colorPrimaryLight">#0271DB</color>
+
     <color name="colorAccent">#ff003f</color> <!-- This value is hard coded into the database and data classes -->
     <color name="colorAccentDark">#FFCC0032</color>
     <color name="colorAdditional1">#e80147</color>
