--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -4,8 +4,8 @@
       tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
 
-        <item android:id="@+id/home_drawer_item" android:title="Home"/>
-        <item android:id="@+id/groups_drawer_item" android:title="Groups"/>
-        <item android:id="@+id/settings_drawer_item" android:title="Settings"/>
+        <item android:id="@+id/home_drawer_item" android:title="Home" android:icon="@drawable/ic_home_black_24dp"/>
+        <item android:id="@+id/groups_drawer_item" android:title="Groups" android:icon="@drawable/ic_list_black_24dp"/>
+        <item android:id="@+id/settings_drawer_item" android:title="Settings" android:icon="@drawable/ic_settings_black_24dp"/>
     </group>
 </menu>
