--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -11,6 +11,7 @@
             android:id="@+id/edit_constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
@@ -18,13 +19,13 @@
                 android:layout_height="wrap_content" android:id="@+id/edit_button_exit"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                 app:layout_constraintTop_toTopOf="@+id/edit_button_save"
-                android:background="@android:drawable/ic_menu_close_clear_cancel"
+                android:background="@drawable/ic_close_black_24dp"
                 app:layout_constraintBottom_toBottomOf="@+id/edit_button_save" android:padding="8dp"/>
         <Button
                 android:text="Save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/edit_button_save"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toTopOf="parent"/>
         <EditText
                 android:layout_width="0dp"
@@ -51,14 +52,14 @@
                 app:layout_constraintStart_toEndOf="@+id/edit_button_exit" android:layout_marginStart="16dp"/>
         <ImageButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_edit"
+                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_mode_edit_black_24dp"
                 android:id="@+id/edit_button_update" android:background="@null"
                 app:layout_constraintTop_toTopOf="@+id/edit_button_save"
                 app:layout_constraintBottom_toBottomOf="@+id/edit_button_save"
                 app:layout_constraintEnd_toStartOf="@+id/edit_button_menu" android:layout_marginEnd="8dp"/>
         <ImageButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_menu_vertical_dark"
+                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_more_vert_black_24dp"
                 android:id="@+id/edit_button_menu" android:background="@null"
                 app:layout_constraintTop_toTopOf="@+id/edit_button_save"
                 app:layout_constraintBottom_toBottomOf="@+id/edit_button_save" app:layout_constraintEnd_toEndOf="parent"
